--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -1,8 +1,6 @@
 @use "src/styles/mixins" as *;
 
-.navbar, .inner, .item {
-    @include flex($align: center);
-}
+.navbar, .inner, .item { @include flex($align: center) }
 
 .navbar {
     height: 58px;
@@ -17,27 +15,26 @@
 }
 
 .item {
-    color: var(--text-color-secondary);
-    border-radius: var(--control-corner-radius);
     justify-content: center;
-    padding: 5px 11px 6px 11px;
     margin: 0 4px;
+    padding: 5px 11px 6px 11px;
+    border-radius: var(--control-corner-radius);
+    color: var(--text-color-secondary);
     text-decoration: none;
     transition: 83ms linear background-color;
     font: {
         size: 1.36rem;
         weight: normal;
     }
+
     &.selected {
         background-color: var(--subtle-color-secondary);
         color: var(--accent-text-default);
     }
-    &:hover {
-        background-color: var(--subtle-color-secondary);
-    }
-    &:active {
-        background-color: var(--subtle-color-tertiary);
-    }
+
+    &:hover { background-color: var(--subtle-color-secondary) }
+    &:active { background-color: var(--subtle-color-tertiary) }
+
     :global(svg) {
         @include icon($size: 16px);
         margin-right: 4px;
@@ -54,15 +51,13 @@
     @include flex($align: center);  
     margin-right: 8px;
     color: var(--text-color-primary);
-    transition: 100ms ease;
     text-decoration: none;
+    transition: 100ms ease;
     font: {
         size: 2rem;
         weight: 600;
     }
-    &:hover {
-        color: var(--text-color-secondary);
-    }
+    &:hover { color: var(--text-color-secondary) }
     img {
         margin-right: 12px;
         width: auto;
@@ -77,20 +72,18 @@
 
 .button {
     @include flex($align: center, $justify: center);
-    margin-left: 8px;
     width: 34px;
     height: 34px;
+    margin-left: 8px;
     border: none;
+    border-radius: var(--control-corner-radius);
     background-color: transparent;
     color: var(--text-color-secondary);
-    border-radius: var(--control-corner-radius);
     text-decoration: none;
-    &:hover {
-        background-color: var(--subtle-color-secondary);
-    }
-    &:active {
-        background-color: var(--subtle-color-tertiary);
-    }
+
+    &:hover { background-color: var(--subtle-color-secondary) }
+    &:active { background-color: var(--subtle-color-tertiary) }
+
     :global(svg) {
         transition: 130ms cubic-bezier(0.16, 0.16, 0, 1) transform;
         @include icon($size: 18px);
@@ -100,32 +93,31 @@
 :global {
     .navbar .button.sidebar-button {
         width: 38px;
-        &:active svg {
-            transform: scaleX(0.65);
-        }
-        svg {
-            width: 16px;
-        }
+
+        &:active svg { transform: scaleX(0.65) }
+        svg { width: 16px }
     }
 }
 
 .sidebar {
-    display: none;
-    transform: translateX(100%);
     position: fixed;
     top: 0;
     right: 0;
+    display: none;
     width: 272px;
     height: 100vh;
     padding-top: 62px;
-    background-color: var(--background-base);
-    border-radius: var(--overlay-corner-radius);
     border: 1px solid var(--surface-stroke-default);
+    border-radius: var(--overlay-corner-radius);
+    background-color: var(--background-base);
+    transform: translateX(100%);
     transition: 120ms cubic-bezier(0.1, 0.9, 0.2, 1);
+
     &.visible {
         transition-duration: 350ms;
         transform: none;
     }
+
     hr {
         margin: 4px 0;
         border: none;
@@ -144,10 +136,8 @@
         background-color: rgba(var(--mica-tint), var(--mica-tint-opacity));
         backdrop-filter: blur(60px) saturate(150%);
     }
-    .sidebar {
-        @include flex($direction: column, $justify: space-between);
-    }
-    :global(body) {
-        padding-top: 62px;
-    }
+
+    .sidebar { @include flex($direction: column, $justify: space-between); }
+
+    :global(body) { padding-top: 62px; }
 }
