--- a/src/lib/PageSection/PageSection.scss
+++ b/src/lib/PageSection/PageSection.scss
@@ -1,57 +1,61 @@
 @use "src/styles/mixins" as *;
 
 .page-section {
-    position: relative;
-    z-index: 1;
-    
-    :global {
-        h1, h2, h3 {
-            margin: 0;
-            font-weight: 600;
-            color: var(--text-color-primary);
-        }
-        h1 {
-            font-size: 7.2rem;
-        }
-        h2 {
-            font-size: 4.8rem;
-        }
-        h3 {
-            font-size: 3.2rem;
-        }
-        p {
-            max-width: 65ch;
-            margin-bottom: 24px;
-            margin-top: 12px;
-            line-height: 1.65;
-            color: var(--text-color-tertiary);
-            font: {
-                size: 1.6rem;
-                weight: 400;
-            }
-        }
+	position: relative;
+	z-index: 1;
 
-        hr {
-            margin: 0;
-            margin-bottom: 24px;
-            border: none;
-            border-top: 1px solid var(--divider-color-default);
-        }
+	:global {
+		h1, h2, h3 {
+			margin: 0;
+			color: var(--text-color-primary);
+			font-weight: 600;
+		}
 
-        .buttons-spacer {
-            @include flex($inline: true, $wrap: true, $gap: 8px);
-        }
-    }
-    &-inner {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        max-width: 2048px;
-        padding: 72px;
-    
-        @media only screen and (max-width: 648px) {
-            padding: 48px;
-        }
-    }
+		h1 {
+			font-size: 7.2rem;
+		}
+
+		h2 {
+			font-size: 4.8rem;
+		}
+
+		h3 {
+			font-size: 3.2rem;
+		}
+
+		p {
+			max-width: 65ch;
+			margin-top: 12px;
+			margin-bottom: 24px;
+			color: var(--text-color-tertiary);
+			font: {
+				size: 1.6rem;
+				weight: 400;
+			}
+			line-height: 1.65;
+		}
+
+		hr {
+			margin: 0 0 24px;
+			border: none;
+			border-top: 1px solid var(--divider-color-default);
+		}
+
+		.buttons-spacer {
+			@include flex($inline: true, $wrap: true, $gap: 8px);
+		}
+	}
+
+	&-inner {
+		position: relative;
+		width: 100%;
+		max-width: 2048px;
+		height: 100%;
+		margin: 0 auto;
+		padding: 72px;
+
+		@media only screen and (max-width: 648px) {
+			padding: 48px;
+		}
+	}
 }
