--- a/src/page-sections/themes/ThemesSection.scss
+++ b/src/page-sections/themes/ThemesSection.scss
@@ -1,4 +1,4 @@
-@use "src/styles/mixins";
+@use "src/styles/mixins" as *;
 
 :global {
 	// Outer section
@@ -10,7 +10,7 @@
 
 		// Inner section
 		.page-section-inner {
-			@include mixins.flex($align: center);
+			@include flex($align: center);
 		}
 
 		// HACK: --background-base is a fairly generic variable that makes more sense to style on themes other than default.
