--- a/src/lib/BlogCard/BlogCard.scss
+++ b/src/lib/BlogCard/BlogCard.scss
@@ -1,17 +1,24 @@
 .blog-card {
     overflow: hidden;
     height: auto;
+    cursor: default;
     text-decoration: none;
-    min-height: 360px;
-    border-radius: var(--control-corner-radius);
+    min-height: 380px;
+    border-radius: calc(var(--control-corner-radius) + 2px);
     box-shadow: var(--card-elevation);
-    background-color: var(--background-base);
-    transition: 250ms cubic-bezier(0, 0, 0, 1) all;
+    background-color: var(--card-background-secondary);
+    border: 1px solid var(--card-stroke-default);
+    transition: 250ms ease;
     &:hover {
-        transform: translateY(-4px);
+        transform: translateY(-2px);
         box-shadow: var(--flyout-elevation);
     }
+    &:active {
+        transform: none;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.13);
+    }
     img {
+        -webkot-user-drag: none;
         width: 100%;
         height: 193.5px;
     }
@@ -19,12 +26,14 @@
 
 .card-body {
     padding: 24px;
-    color: var(--text-color-secondary);
+    color: var(--text-color-tertiary);
     font-size: var(--control-font-size);
+    line-height: 24px;
     h5 {
         color: var(--text-color-primary);
         margin: 0;
         margin-bottom: 4px;
+        line-height: 32px;
         font: {
             size: 24px;
             weight: 600;
