add back typescript lang attribute

--- a/src/lib/BlogCard/BlogCard.scss
+++ b/src/lib/BlogCard/BlogCard.scss
@@ -26,7 +26,7 @@
 
 .card-body {
     padding: 24px;
-    color: var(--text-color-tertiary);
+    color: var(--text-color-secondary);
     font-size: var(--control-font-size);
     line-height: 24px;
     h5 {
