--- a/src/lib/BlogCard/BlogCard.scss
+++ b/src/lib/BlogCard/BlogCard.scss
@@ -1,10 +1,13 @@
+@use "src/styles/mixins" as *;
+
 .blog-card {
+    @include flex($direction: column);
     overflow: hidden;
     height: auto;
     cursor: default;
     text-decoration: none;
     min-height: 380px;
-    border-radius: calc(var(--control-corner-radius) + 2px);
+    border-radius: var(--overlay-corner-radius);
     box-shadow: var(--card-elevation);
     background-color: var(--card-background-secondary);
     border: 1px solid var(--card-stroke-default);
@@ -18,25 +21,73 @@
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.13);
     }
     img {
+        flex: 0 0 auto;
         -webkot-user-drag: none;
         width: 100%;
         height: 193.5px;
     }
+    footer {
+        @include flex($align: center, $gap: 8px);
+        flex: 0 0 auto;
+        padding: 24px;
+        padding-top: 12px;
+        img {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            border: 1px solid var(--card-stroke-default);
+        }
+        .post-info {
+            @include flex($direction: column);
+            color: var(--text-color-tertiary);
+            font: {
+                size: 12px;
+                weight: 400;
+            }
+            a {
+                text-decoration: none;
+                margin: 0;
+                margin-bottom: 2px;
+                color: var(--text-color-primary);
+                font: {
+                    size: var(--control-font-size);
+                    weight: 600;
+                }
+                &:hover {
+                    color: var(--accent-color-secondary);
+                }
+                &:active {
+                    color: var(--accent-color-tertiary);
+                }
+            }
+        }
+    }
 }
 
-.card-body {
+.body {
+    flex: 1 1 auto;
     padding: 24px;
+    padding-bottom: 0;
     color: var(--text-color-secondary);
-    font-size: var(--control-font-size);
+    font-size: 16px;
     line-height: 24px;
-    h5 {
-        color: var(--text-color-primary);
+    h5, h6 {
         margin: 0;
         margin-bottom: 4px;
+    }
+    h5 {
+        color: var(--text-color-primary);
         line-height: 32px;
         font: {
             size: 24px;
             weight: 600;
         }
-    }  
+    }
+    h6 {
+        color: var(--text-color-tertiary);
+        font: {
+            size: inherit;
+            weight: inherit;
+        }
+    }
 }
