--- a/src/page-sections/hero/HeroSection.scss
+++ b/src/page-sections/hero/HeroSection.scss
@@ -97,6 +97,8 @@
 		img {
 			position: absolute;
 			right: 0;
+            width: auto;
+            height: auto;
 			max-width: 100%;
 			max-height: 100%;
 			border: 1px solid var(--surface-stroke-default);
