--- a/src/page-sections/themes/ThemesSection.scss
+++ b/src/page-sections/themes/ThemesSection.scss
@@ -139,7 +139,7 @@
 		// Seen on the right side of the section
 		.component-showcase {
 			position: absolute;
-			right: -400px;
+			right: 0;
 			transform: rotate(30deg);
 		}
 	}
