add clickable prop to FeatureCard, fix text alignment

--- a/src/lib/FeatureCard/FeatureCard.scss
+++ b/src/lib/FeatureCard/FeatureCard.scss
@@ -2,6 +2,7 @@
 
 .feature-card {
     padding: 24px;
+    text-align: left;
     position: relative;
     break-inside: avoid-column;
     cursor: default;
