fix theme 3 text color

--- a/src/page-sections/themes/ThemesSection.scss
+++ b/src/page-sections/themes/ThemesSection.scss
@@ -59,8 +59,8 @@
 				--accent-text-contrast-primary: #fff;
 				--accent-text-contrast-secondary: rgba(255, 255, 255, 0.6);
 				--text-color-primary: #fff;
-				--text-color-tertiary: #b19dd8;
-				--text-color-secondary: var(--text-color-secondary);
+				--text-color-secondary: #b19dd8;
+				--text-color-tertiary: var(--text-color-secondary);
 				--subtle-color-secondary: #2c2642;
 				--subtle-color-tertiary: var(--subtle-color-secondary);
 				--background-base: #17141f;
