--- a/src/page-sections/themes/ThemesSection.scss
+++ b/src/page-sections/themes/ThemesSection.scss
@@ -3,7 +3,6 @@
 :global {
 	// Outer section
 	#themes-section {
-		min-height: 600px; // I want to avoid cutting off the component showcase
 		border-radius: 0 0 var(--overlay-corner-radius) var(--overlay-corner-radius);
 		background-color: var(--card-background-secondary);
 		overflow: hidden;
@@ -11,10 +10,26 @@
 		// Inner section
 		.page-section-inner {
 			@include flex($align: center);
+            min-height: 600px; // I want to avoid cutting off the component showcase
 		}
+
+        // Fancy-pants dotted background
+        // I want dynamic coloring so we'll have to mask it
+        &::before {
+            content: "";
+            position: absolute;
+            width: 200vw;
+            height: 200vw;
+            top: 50%;
+            left: 50%;
+            transform: rotate(30deg) translate(-50%, -50%);
+            background: linear-gradient(90deg, transparent 5%, var(--dots-color, var(--divider-color-default)));
+            mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='10' fill='%23000' /%3E%3C/svg%3E") center/18px;
+        }
 
 		// HACK: --background-base is a fairly generic variable that makes more sense to style on themes other than default.
 		&:not(.theme-1) {
+            --dots-color: var(--subtle-color-tertiary);
 			background-color: var(--background-base);
 
 			// Use default accent color instead of dark-1 (see reasoning below)
@@ -24,6 +39,8 @@
 		}
 
 		// Themes
+        // WARNING: CSS variable voodoo ahead.
+        //
 		// CSS variables behave rather strange.
 		// Setting a scoped variable that changes the value
 		// in another parent variable's hsla() function
@@ -62,7 +79,7 @@
 				--text-color-secondary: #b19dd8;
 				--text-color-tertiary: var(--text-color-secondary);
 				--subtle-color-secondary: #2c2642;
-				--subtle-color-tertiary: var(--subtle-color-secondary);
+				--subtle-color-tertiary: #211d2f;
 				--background-base: #17141f;
                 --layer-color-default: var(--subtle-color-tertiary);
 			}
@@ -80,15 +97,10 @@
 				--text-color-tertiary: #332500;
 				--text-color-secondary: var(--text-color-primary);
 				--subtle-color-secondary: #fff;
+                --subtle-color-tertiary: rgba(0, 0, 0, 0.1);
 				--background-base: #feb400;
 				.hyperlink-button {
-					&:hover {
-						background-color: rgba(0, 0, 0, 0.1);
-					}
-
-					&:active {
-						background-color: rgba(0, 0, 0, 0.2);
-					}
+                    --subtle-color-secondary: rgba(0, 0, 0, 0.05);
 				}
 			}
 
@@ -122,17 +134,11 @@
 				--text-color-tertiary: #4c566a;
 				--text-color-secondary: var(--text-color-primary);
 				--subtle-color-secondary: var(--accent-color-default);
+                --subtle-color-tertiary: #bec8da;
 				--background-base: #d8dee9;
                 --layer-color-default: #3b4252;
-
 				.hyperlink-button {
-					&:hover {
-						background-color: #e5e9f0;
-					}
-
-					&:active {
-						background-color: #eceff4;
-					}
+                    --subtle-color-secondary: #ced6e3;
 				}
 			}
 		}
