--- a/src/page-sections/themes/ThemesSection.scss
+++ b/src/page-sections/themes/ThemesSection.scss
@@ -23,7 +23,7 @@
             top: -50%;
             left: -50%;
             transform: rotate(30deg);
-            background-image: linear-gradient(90deg, transparent 10%, var(--dots-color, var(--divider-color-default)) 100%);
+            background-image: linear-gradient(90deg, transparent 10%, var(--dots-color, var(--control-stroke-secondary)) 100%);
             mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='10' fill='%23000' /%3E%3C/svg%3E") center/18px;
         }
 
@@ -39,7 +39,7 @@
 		}
 
 		// Themes
-        // WARNING: CSS variable voodoo ahead.
+        // CSS variable voodoo ahead.
         //
 		// CSS variables behave rather strange.
 		// Setting a scoped variable that changes the value
@@ -64,6 +64,7 @@
 				--subtle-color-tertiary: #2f3541;
 				--background-base: #2b303a;
                 --layer-color-default: var(--subtle-color-secondary);
+                --dots-color: #404859;
 			}
 
 			&3 {
@@ -82,6 +83,7 @@
 				--subtle-color-tertiary: #211d2f;
 				--background-base: #17141f;
                 --layer-color-default: var(--subtle-color-tertiary);
+                --dots-color: #2c2642;
 			}
 
 			&4 {
@@ -99,6 +101,7 @@
 				--subtle-color-secondary: #fff;
                 --subtle-color-tertiary: rgba(0, 0, 0, 0.1);
 				--background-base: #feb400;
+                --dots-color: rgba(0, 0, 0, 0.2);
 				.hyperlink-button {
                     --subtle-color-secondary: rgba(0, 0, 0, 0.05);
 				}
@@ -119,6 +122,7 @@
 				--subtle-color-secondary: #073642;
 				--subtle-color-tertiary: #083945;
 				--background-base: #002b36;
+                --dots-color: var(--accent-text-contrast-primary);
 			}
 
 			&6 {
@@ -137,6 +141,7 @@
                 --subtle-color-tertiary: #bec8da;
 				--background-base: #d8dee9;
                 --layer-color-default: #3b4252;
+                --dots-color: var(--text-color-tertiary);
 				.hyperlink-button {
                     --subtle-color-secondary: #ced6e3;
 				}
