--- a/src/page-sections/hero/HeroSection.scss
+++ b/src/page-sections/hero/HeroSection.scss
@@ -68,7 +68,7 @@
                 filter: none;
             }
             50% {
-                filter: hue-rotate(90deg);
+                filter: hue-rotate(180deg);
             }
             to {
                 filter: none;
@@ -77,22 +77,27 @@
 
 		// Backdrop canvas
 		canvas {
-            --gradient-color-1: #036998;
-            --gradient-color-2: #4f39b4;
-            --gradient-color-3: #04e2b7;
+            --gradient-color-1: #52dd70;
+            --gradient-color-2: #00d6b9;
+            --gradient-color-3: #0491e2;
             --gradient-color-4: var(--background-base); 
 			position: absolute;
 			right: 0;
 			bottom: 0;
 			z-index: -1;
-			width: 60%;
+            width: 60vw;
             min-width: 100vh;
-			height: 100vh;
+			height: 100%;
             animation: canvas-hue-rotate 15s infinite linear;
-			mask: url("/ui/hero-mask.png") bottom right/100% no-repeat;
+			mask: url("/ui/hero-mask.png") bottom right/cover no-repeat;
             @media (prefers-color-scheme: light) {
                 opacity: 0.5;
-            } 
+            }
+            @media only screen and (max-width: 648px) {
+                width: 100%;
+                height: 60vh;
+                mask-size: 100% 100%;
+            }
 		}
 	}
 }
