--- a/src/page-sections/themes/ThemesSection.scss
+++ b/src/page-sections/themes/ThemesSection.scss
@@ -206,7 +206,7 @@
     img,
     .card {
         opacity: 0;
-        transform: scale(0.8);
+        transform: scale(0.9);
         border-radius: var(--overlay-corner-radius);
         box-shadow: var(--flyout-elevation);
     }
@@ -219,9 +219,8 @@
 
     // Scale animations
     @keyframes showcase-item {
-        from {
-            transform: scale(0.8);
-            opacity: 0;
+        50% {
+            opacity: 1;
         }
         to {
             transform: scale(1);
@@ -237,22 +236,22 @@
             animation: showcase-item 250ms cubic-bezier(0, 0, 0, 1) forwards var(--initial-delay);
         }
         .layout {
-            animation-delay: calc(var(--initial-delay) + 50ms);
-        }
-        .card:last-child {
             animation-delay: calc(var(--initial-delay) + 100ms);
         }
-        .card:first-child {
-            animation-delay: calc(var(--initial-delay) + 150ms);
-        }
-        .properties {
+        .card:last-child {
             animation-delay: calc(var(--initial-delay) + 200ms);
         }
-        .tabs {
+        .card:first-child {
             animation-delay: calc(var(--initial-delay) + 250ms);
         }
-        .drive {
+        .properties {
             animation-delay: calc(var(--initial-delay) + 300ms);
+        }
+        .tabs {
+            animation-delay: calc(var(--initial-delay) + 350ms);
+        }
+        .drive {
+            animation-delay: calc(var(--initial-delay) + 400ms);
         }
     }
 
